Included K. Hastings/SARA program edits and suggestions. Updated section on Wild Species.

--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -87,10 +87,9 @@ This document is developed as a reproducible reporting tool, supported by the R 
 areaMap
 # areaMap can be plotted once and then reused for other plots
 ```
-Species that have been listed by the _Species At Risk Act_ (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild Species listings, are the current focus of this reproducible reporting framework. Recognizing the importance of considering ecosystem-based approaches for management, this report also includes information on other (e.g., commercial, recreational, ecologically significant) species, ecosystem components (e.g., coastal habitat), and areas designated for spatial planning (e.g., Ecologically and Biologically Significant Areas) for each user-defined area. 
 
 The output from the search includes the following sections: 
-1) Information from the National Aquatic Species At Risk Program,
+1) Information from the National Aquatic Species at Risk Geodatabase,
 2) Fish and Invertebrates,
 3) Cetaceans,
 4) Habitat,
@@ -116,15 +115,17 @@ knitr::kable(table_tier,align="l",
 
 # **SEARCH RESULTS**  
 
-#### **EMPHASIS ON SPECIES LISTED BY THE <i>SPECIES AT RISK ACT</i>, ASSESSED BY THE COMMITTEE ON THE STATUS OF THE ENDANGERED WILDLIFE IN CANADA (COSEWIC) AND/OR WILD SPECIES**  
+Aquatic Species that have been listed under the _Species At Risk Act_ (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild Species report (Wild Species 2015) are the current focus of this reproducible reporting framework. Recognizing the importance of considering ecosystem-based approaches for management, this report also includes information on other species (e.g., commercial, recreational, ecologically significant), ecosystem components (e.g., coastal habitat), and areas designated for spatial planning (e.g., Ecologically and Biologically Significant Areas) for each user-defined area.
 
-The following are definitions relevant for species listed by the _Species At Risk Act_ (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild Species listings:
 
-- **SARA** - The following text was obtained from the SARA website (URL below). The Species At Risk Act (SARA) was proclaimed in June 2003; it is one part of a three part Government of Canada strategy for the protection of wildlife Species At Risk. This three part strategy also includes commitments under the Accord for the Protection of Species At Risk and activities under the Habitat Stewardship Program for Species At Risk. The purposes of SARA are to prevent Canadian indigenous species, subspecies, and distinct populations from becoming extirpated or extinct, to provide for the recovery of endangered or threatened species, and encourage the management of other species to prevent them from becoming at risk. It applies to all federal lands in Canada; all wildlife species listed as being at risk; and their critical habitat. For more information on SARA visit <https://www.canada.ca/en/environment-climate-change/services/species-risk-public-registry.html> 
+The following are definitions relevant for species listed by the _Species at Risk Act_ (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the _Wild Species_ 2015 report. Note: Wild Species ranked as at risk may be potential candidates for detailed assessments by COSEWIC (Wild Species 2015). COSEWIC species assessed as Special Concern, Threatened, and Endangered may be listed by SARA.
+
+- **SARA** - The following text was obtained from the SARA website (URL below). The Species at Risk Act (SARA) was proclaimed in June 2003; it is one part of a three part Government of Canada strategy for the protection of wildlife Species At Risk. This three part strategy also includes commitments under the Accord for the Protection of Species At Risk and activities under the Habitat Stewardship Program for Species At Risk. The purposes of SARA are to prevent Canadian indigenous species, subspecies, and distinct populations from becoming extirpated or extinct, to provide for the recovery of endangered or threatened species, and encourage the management of other species to prevent them from becoming at risk. It applies to all federal lands in Canada; all wildlife species listed as being at risk; and their critical habitat. For more information on SARA visit <https://www.canada.ca/en/environment-climate-change/services/species-risk-public-registry.html> 
 
 - **COSEWIC** - The following text was obtained from the COSEWIC website (URL below): The Committee on the Status of Endangered Wildlife in Canada (COSEWIC) is an independent advisory panel to the Minister of Environment and Climate Change Canada that meets twice a year to assess the status of wildlife Species At Risk of extinction. Members are wildlife biology experts from academia, government, non-governmental organizations and the private sector responsible for designating wildlife species in danger of disappearing from Canada. COSEWIC determines the national status of wild Canadian species, subspecies, varieties or other designatable units that are suspected of being at risk of extinction or extirpation. COSEWIC uses a process based on science and Aboriginal or community knowledge to assess wildlife Species At Risk. All native mammals, birds, reptiles, amphibians, fish, arthropods, molluscs, vascular plants, mosses and lichens are included in COSEWIC's current mandate. For more information on COSEWIC visit <https://www.cosewic.ca/index.php/en-ca/>
 
-- **Wild species** - Every five years, the National General Status Working Group (NGSWG), which includes representatives from federal, provincial and territorial governments, publishes a general report on the status of wildlife species in Canada. These reports are meant to inform Canadians about the status of species in the country, to help prevent species in Canada from becoming extinct as a consequence of human activity, and to identify species that should be considered for evaluation by COSEWIC. For more information about Wild Species reports visit <https://www.wildspecies.ca/home>
+- **Wild Species** - The following text was obtained from the _Wild Species_ report (2015): In the National Framework for Species at Risk Conservation (http://www.registrelep-sararegistry.gc.ca/default.asp?lang=En&n=236A2A34-1), two main steps are identified in the species assessment process. Step 1: Jurisdictions collectively review the general status of their wildlife species, using the best available information and inventory data, to determine whether any species under their jurisdiction may be at risk. Step 2: Species that may be at risk are further examined, using a science-based approach, to more fully understand the nature and severity of the risk. The first step is conducted by the program on General Status of Species in Canada. The second step is done by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC; http://www.cosewic.gc.ca/). One of the goals of the program on General Status of Species in Canada is to identify species that may be at risk. These species can be potential candidates for detailed assessments by COSEWIC. In support of the program on General Status of Species in Canada, the National General Status Working Group (NGSWG) was formed by representatives from each of the Canadian provinces and territories, and of the three federal agencies whose mandate includes wildlife: Canadian Wildlife Service of Environment and Climate Change Canada, Fisheries and Oceans Canada, Parks Canada. Every 5 years, the NGSWG publishes a _Wild Species_ report on the conservation status of wildlife species [@WildSpecies2015]. The NGSWG uses the methodology of NatureServe (https://www.natureserve.org/) to assess the conservation status of species in Canada. For aquatic species, Fisheries and Oceans Canada has the final signoff on the conservation ranks. All the results of the program on the General Status of Species in Canada are available on the Wild Species website (https://www.wildspecies.ca/). Results are also integrated in the Species at Risk Public Registry (https://www.registrelep-sararegistry.gc.ca/), in provincial and territorial websites, and in the NatureServe website. More information, please visit: https://www.wildspecies.ca/reports.
+
 
 {{add_main_sections}}
 
