--- a/app/Rmd/report_cetaceans_EN.Rmd
+++ b/app/Rmd/report_cetaceans_EN.Rmd
@@ -1,6 +1,6 @@
 ## **CETACEANS**
 
-This section summarizes information available through various sources, via reported visual sightings, modeled predictions of suitable habitat, and important habitat to identify cetacean species likely to occur in the search area. Output from each data source are described in subsections labelled according to the data source. While numerous species have been identified in this region, only those listed by SARA, or assessed by COSEWIC and Wild Species listings are summarized here. Outputs include sightings data collected from systematic cetacean surveys as well as opportunistically collected data from previous years in Canadian and sometimes American waters in the northwest Atlantic. However, the majority of cetacean sightings for the Scotian Shelf bioregion are opportunistic; comprehensive systematic surveys on the occurrence or distribution of cetaceans across the entire region are limited. Results in this report provide some information on distribution but should not be interpreted as comprehensive indices of population abundance or relative density or abundance within the study area, as the related effort does not cover the entirety of a species’ range and is unequal in coverage across the study area. A future comprehensive analysis of any associated observational effort for these data is necessary to further characterize cetacean presence in the area over temporal and spatial scales. For surveys with either random placement of transects within the study area, or surveys with estimates of distance to sighting, density and distribution of species could be estimated (though such study results are not presented here). Consequently, outputs of this report include presence-only data, and we cannot say whether a lack of presence of a species relates to a real absence, a result of lack of effort, or because additional data sources were not reported for the area (e.g., sightings data from other sources, acoustic detections). We, therefore, suggest for this report that the absence of a species should be interpreted as an absence of reporting, not necessarily an absence of the species in the area.
+This section summarizes information available through various sources, via reported visual sightings, modeled predictions of suitable habitat, and important habitat to identify cetacean species likely to occur in the search area. Outputs from each data source are described in subsections labelled according to the data source. While numerous species have been identified in this region, only those listed under SARA, or assessed by COSEWIC and Wild Species listings are summarized here. Outputs include sightings data collected from systematic cetacean surveys as well as opportunistically collected data from previous years in Canadian and sometimes American waters in the northwest Atlantic. However, the majority of cetacean sightings for the Scotian Shelf bioregion are opportunistic; comprehensive systematic surveys on the occurrence or distribution of cetaceans across the entire region are limited. Results in this report provide some information on distribution but should not be interpreted as comprehensive indices of population abundance or relative density or abundance within the study area, as the related effort does not cover the entirety of a species’ range and is unequal in coverage across the study area. A future comprehensive analysis of any associated observational effort for these data is necessary to further characterize cetacean presence in the area over temporal and spatial scales. For surveys with either random placement of transects within the study area, or surveys with estimates of distance to sighting, density and distribution of species could be estimated (though such study results are not presented here). Consequently, outputs of this report include presence-only data, and we cannot say whether a lack of presence of a species relates to a real absence, a result of lack of effort, or because additional data sources were not reported for the area (e.g., sightings data from other sources, acoustic detections). We, therefore, suggest for this report that the absence of a species should be interpreted as an absence of reporting, not as an absence of the species in the area.
 
 Data sources/products used in this section include: Whale Sightings Database (WSDB), The Whitehead Lab (Dalhousie University), North Atlantic Right Whale Consortium (NARWC) Sightings Database, Ocean Biodiversity Information System (OBIS), Priority Areas to Enhance Monitoring of Cetaceans, Blue Whale Important Habitat in the Western North Atlantic, and Northern Bottlenose Whales important habitat in inter-canyon areas on the eastern Scotian Shelf. 
 
@@ -255,6 +255,6 @@ The inter-canyon habitat area polygon was delineated using the 500 m depth conto
   NBNW_zoom<-plot_NBNW_hab_zoom(NBNW_ImpHab_sf, studyArea, land50k_sf, 100, bounds_sf)
 ```
 
-```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: High. Security level: none. Proposed Northern Bottlenose Whales important habitat in inter-canyon areas on the eastern Scotian Shelf. Northern Bottlenose Whales are present year-round in the inter-canyon areas, which function as foraging habitat and movement corridors. Note that the full extent of important habitat for Scotian Shelf Northern Bottlenose Whales remains unknown. Please see additional information in <a href="http://publications.gc.ca/collections/collection_2020/mpo-dfo/fs70-6/Fs70-6-2020-008-eng.pdf">DFO 2020</a>.'}
+```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: High. Security level: none. Northern Bottlenose Whale important habitat in inter-canyon areas on the eastern Scotian Shelf. Northern Bottlenose Whales are present year-round in the inter-canyon areas, which function as foraging habitat and movement corridors. Note that the full extent of important habitat for Scotian Shelf Northern Bottlenose Whales remains unknown. Please see additional information in <a href="http://publications.gc.ca/collections/collection_2020/mpo-dfo/fs70-6/Fs70-6-2020-008-eng.pdf">DFO 2020</a>.'}
 grid.arrange(NBNW_wide, NBNW_zoom, bottom = expression(paste("Longitude ",degree,"N",sep="")), left = expression(paste("Latitude ",degree,"N",sep="")), nrow = 1, widths = c(4.1/10, 5.9/10))
 ```
