--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -122,6 +122,16 @@ Data, and Methods},
   year = {in press}
 }
 
+
+ Wild Species 2015.pdf (canada.ca) (. 2016. . National General Status Working Group: 128 pp)
+
+@techreport{WildSpecies2015,
+  author = {Wild-Species},
+  title = {Wild Species 2015: The General Status of Species in Canada},
+  institution = {Canadian Endangered Species Conservation Council, National General Status Working Group: 128 pp.},
+  year = {2015}
+}
+
 @misc{whalemap,
   author = {Johnson, HD [App]},
   title = {WhaleMap},
