--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -8,7 +8,7 @@ Data, and Methods},
 
 @techreport{DFO2016_recoverynbw,
   author = {DFO},
-  title = {Recovery Strategy for the Northern Bottlenose Whale ({\it ({\it Hyperoodon ampullatus})}) Scotian Shelf population, in Atlantic Canadian Waters},
+  title = {Recovery Strategy for the Northern Bottlenose Whale ({\it Hyperoodan ampullatus}) Scotian Shelf population, in Atlantic Canadian Waters},
   institution = {Species at Risk Act Recovery Strategy Series. Fisheries and Oceans Canada, Ottawa. vii + 70 pp},
   year = {2016}
 }
@@ -35,7 +35,7 @@ Data, and Methods},
   volume = {32},
   pages = {437--458},
   year = {2017},
-  doi = {10.3354/esr00823}
+  doi = {https://doi.org/10.3354/esr00823}
 }
 
 @techreport{Gomez2020SDM,
@@ -117,7 +117,7 @@ Data, and Methods},
 
 @techreport{Stanistreet2021,
   author = {Stanistreet, J.E., Feyrer, L.J., and Moors-Murphy, H.B.},
-  title = {Distribution, movements, and habitat use of Northern Bottlenose Whales ({\it Hyperoodon ampullatus}) on the Scotian Shelf},
+  title = {Distribution, movements, and habitat use of northern bottlenose whales ({\it Hyperoodon ampullatus}) on the Scotian Shelf},
   institution = {DFO Can. Sci. Advis. Sec. Res. Doc. link forthcoming},
   year = {in press}
 }
@@ -132,7 +132,7 @@ Data, and Methods},
 @article{Whitehead2013,
   author = {Whitehead, H.},
   title = {Trends in cetacean abundance in the Gully submarine canyon,
-1988–2011 highlight a 21 % per year increase in Sowerby’s Beaked Whales ({\it Mesoplodon bidens})},
+1988–2011 highlight a 21 percent per year increase in Sowerby’s Beaked Whales {\it Mesoplodon bidens}},
   journal = {Can. J. Zool.},
   volume = {91},
   pages = {141--148},
