--- a/app/Rmd/report_SARA_EN.Rmd
+++ b/app/Rmd/report_SARA_EN.Rmd
@@ -87,13 +87,13 @@ attribute="NONE"
 clipped <- poly_intersect(poly_sf,Region,studyArea, bboxMap)
 ```
 
-```{r, fig.cap='Quality Tier: High. Security level: none. This map summarizes draft critical habitat of Leatherback Sea Turtles in the Scotian Shelf Bioregion, relative to the search area.', fig.height=6, fig.width=11}
+```{r, fig.cap='Quality Tier: High. Security level: none. This map summarizes draft critical habitat of Leatherback Sea Turtle in the Scotian Shelf Bioregion, relative to the search area.', fig.height=6, fig.width=11}
 if (!is.null(clipped$regionPoly)){
   plot_polygons(regionMap,regionBox,studyBox_geom, clipped$regionPoly,attribute) 
 }   
 ```
 
-```{r, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with draft critical habitat of Leatherback Sea Turtles', fig.height=6, fig.width=11}
+```{r, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with draft critical habitat of Leatherback Sea Turtle', fig.height=6, fig.width=11}
 if (!is.null(clipped$mapPoly)){
   plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapPoly,attribute) 
 }  
